# pdlc-test

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  styles.css  tsconfig.json  vitest.config.ts
backend/: package.json  tsconfig.json
backend/src/: index.test.ts  index.ts
docker/: nginx.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  main.test.ts  main.ts  main.tsx  styles.css
scientific_calculator/: __init__.py  ast_nodes.py  errors.py  parser.py  tokenizer.py
src/: constants.ts  input.test.ts  input.ts  loop.ts  main.js  main.ts  render.test.ts  render.ts  types.ts
src/constants/: keys.js
src/engine/: selectors.js  state.js
src/logic/: bag.test.ts  bag.ts  collision.test.ts  collision.ts  lineClear.test.ts  lineClear.ts  reducer.test.ts  reducer.ts  rotation.test.ts  rotation.ts  score.test.ts  score.ts
src/ui/: display.js  keypad.js  keypad.test.js
styles/: display.css  keypad.css  main.css
tests/: display.spec.js  test_parser.py  test_tokenizer.py
