[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scientific-calculator"
version = "0.1.0"
description = "A self-contained scientific calculator implemented in pure Python 3 using only the standard library."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "pdlc-test" },
]
keywords = ["calculator", "scientific", "math", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[project.scripts]
scicalc = "scientific_calculator.cli:main"

[project.urls]
Homepage = "https://github.com/felipenv/pdlc-test"
Repository = "https://github.com/felipenv/pdlc-test"

[tool.setuptools.packages.find]
where = ["."]
include = ["scientific_calculator*"]
exclude = ["tests*"]
